@@ -155,6 +155,7 @@
     <Compile Include="DataType\IBooleanMatrix.cs" />
     <Compile Include="Data\IPosOnlyFeedback.cs" />
     <Compile Include="DataType\SparseBooleanMatrixStatic.cs" />
+    <Compile Include="RatingPrediction\BiasedMatrixFactorizationMAE.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
